--- a/style.css
+++ b/style.css
@@ -73,9 +73,8 @@ height: 3400px;
     width: 100%;
     height: 1300px; 
     background-attachment: fixed;
-    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 2000px;
     padding: 0 0 60px 0;
 }
 
