--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 h1 {
     font-size: 80px; 
     letter-spacing: 3px;
-    font-family: 'Georgia', cursive;
+    font-family: 'Georgia', serif, sans-serif;
     color: black; 
     text-decoration: none; 
 }
@@ -17,13 +17,13 @@ h2 {
     font-family: 'Georgia', serif, sans-serif;
     color: black;
     text-decoration: none;
-    font-size: 46px;
+    font-size: 48px;
 }
 
 p {
     color: black; 
     font-family: 'Georgia', serif, sans-serif;
-    font-size: 40px;
+    font-size: 36px;
 }
 
 .contact-wrapper {
@@ -67,7 +67,7 @@ p {
 
 .content {
 width: 100%;
-height: 4200px;
+height: 4300px;
 }
 
 .background {
@@ -97,7 +97,7 @@ height: 4200px;
 }
 
 .hello h1:hover {
-    color: rgb(13, 77, 45);
+    color: rgb(167, 30, 105);
     letter-spacing: 8px;
 }
 
@@ -117,67 +117,89 @@ height: 4200px;
     display: flex; 
     font-family: 'Georgia', serif, sans-serif;
     font-weight: 900;
-    font-size: 60px; 
+    font-size: 78px; 
 }
 
 .background-skills {
     display: flex; 
-    /* justify-content: center; */
-    align-content: left; 
-    height: 600px;
-    padding-bottom: 100px;
-    padding-top: 100px; 
+    justify-content: center;
+    height: 900px;
+    padding-bottom: 50px;
+}
+
+.background-headings {
+    font-family: 'Gabriola', serif, sans-serif; 
+    font-size: 78px;
+    font-weight: 900;
+    
+}
+
+.description {
+    padding-left: 100px; 
+    font-family: 'Georgia', serif, sans-serif;
+    font-size: 40px;
+    font-weight: 900;
 }
 
 .grid-container {
 display: grid;
-grid-template-columns: 1fr 1fr 1fr;
-grid-column-gap: 900px;  
-height: 600px;
+grid-template-columns: 500px 500px;
+grid-column-gap: 700px;
+height: 800px;
 width: 100%;
 display: flex; 
-justify-content: center;
 align-content: center;
+justify-content: center;  
 }
 
 .grid-item1 {
     grid-column-start: 1;
     grid-column-end: 2;
-    justify-content: left;
-    align-content: left;
-
+    margin-left: 800px; 
+   
 }
 
 .grid-item2 {
     grid-column-start: 2;
     grid-column-end: 3;
-  
+    padding-top: 150px; 
+    align-content: right; 
+    justify-content: right; 
+    margin-left: 400px;  
 }
 
-.grid-item3 {
+.background-box {
+    background-color:  rgb(243, 242, 242);
+    margin-right: 650px; 
+    padding: 0 30px 0 30px;  
+}
+
+
+/* .grid-item3 {
     grid-column-start: 3;
     grid-column-end: 4; 
-    
-}
+} */
 
 
 
 .image-block {
-    /* float: left;  */
-    /* margin-left: 100px;  */
-    /* justify-content: center; */
-    /* align-content: center; */
+    float: left; 
+    margin-left: 300px; 
+    justify-content: center;
+    align-content: center;
+    padding-top: 25px; 
 
 }
 
 .image {
-    border-radius: 50%;  
+    width: 700px;
+    height: 900px; 
+    border-radius: 20%;   
 }
 
 .skills-block {
     float: right;
-    padding-right: 60px;
-    width: 600px;
+    width: 1300px;
 }
 
 .resume {
