--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ p {
 
 
 
-.contact-link {
+.contact-link a {
     padding: 30px 400px 30px 400px;
     text-align: center;
     text-decoration: none;
@@ -67,7 +67,7 @@ p {
 
 .content {
 width: 100%;
-height: 4300px;
+height: 4550px;
 }
 
 .background {
@@ -171,7 +171,7 @@ justify-content: center;
 .background-box {
     background-color:  rgb(243, 242, 242);
     margin-right: 650px; 
-    padding: 0 30px 0 30px;  
+    padding: 0 30px 5px 40px;  
 }
 
 
@@ -192,46 +192,51 @@ justify-content: center;
 }
 
 .image {
-    width: 700px;
     height: 900px; 
     border-radius: 20%;   
 }
 
 .skills-block {
     float: right;
-    width: 1300px;
+    width: 1325px; 
+}
+
+.flex-container {
+display: flex;
+align-content: center;
+justify-content: center;
 }
 
 .resume {
-    margin-right: 300px;
-    margin-left: 1900px;
+    /* margin-right: 300px; */
+    /* margin-left: 1900px; */
     width: 2200px; 
     height: auto;
-    justify-content: center; 
-    align-content: center;
+    /* justify-content: center;  */
+    /* align-content: center; */
    padding: 10px 0 0 0;
     object-fit: fill;
-    font-size: 32px;
+    font-size: 38px;
     color: black; 
     text-decoration: none; 
 }
 
 .res-headers {
     font-family: 'Georgia', serif, sans-serif;
-    font-size: 50px;
+    font-size: 54px;
     font-weight: 900;
     color: purple;
 }
 
 .res-style1 {
     font-family: 'Georgia', serif, sans-serif;
-    font-size: 40px;
+    font-size: 48px;
     font-weight: 900;
 }
 
 .res-style2 {
     font-family: 'Georgia', serif, sans-serif;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .res-style3 {
