--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
-    max-width:100%;
-    height:auto;
+    width:100vw;
+    height:100vh;
     margin: 0;
 }
 
 .content {
-    width: 100%;
-    height: 4650px;
+    width: 100vw;
+    height: 1250px;
     }
 
 
@@ -15,17 +15,17 @@ h2 {
     font-family: 'Georgia', serif, sans-serif;
     color: black;
     text-decoration: none;
-    font-size: 48px;
+    font-size: 12px;
 }
 
 p {
     color: black; 
     font-family: 'Georgia', serif, sans-serif;
-    font-size: 36px;
+    font-size: 9px;
 }
 
 .contact-container {
-    height: 150px;
+    height: 50px;
     display: flex;
     align-items: center; 
     justify-content: space-evenly;
@@ -39,15 +39,15 @@ p {
 }
 
 .contact-link a {
-    padding: 30px 400px 30px 400px;
+    padding: 8px 100px 8px 100px;
     text-align: center;
     text-decoration: none;
 }
 
-.contact-link h2 {
+/* .contact-link h2 {
     font-weight: 900;
     font-family: 'Georgia', serif, sans-serif;
-    font-size: 46px;
+    font-size: 12px;
     color: black;
     text-decoration: none;
     transition: 0.5s;
@@ -55,52 +55,48 @@ p {
 
 .contact-link h2:hover {
     color: rgb(248, 6, 228);
-    letter-spacing: 6px;
+    letter-spacing: 2px;
     text-decoration: none;
-}
+} */
 
-.icon {
-    
-    width: 150px;
-    height: 150px; 
-    display: block;
-}
+
 
 .background {
     background-image: url(assets/BloodsLake.JPG);
-    width: 100%;
-    height: 1600px; 
+    width: 100vw;
+    height: 400px; 
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: 100% 2000px;
-    padding: 0 0 60px 0;
+    background-size: 100% 500px;
+    padding: 0 0 15px 0;
 }
 
 .hello {
-    padding-right:1100px;
+    padding-right:275px;
     float: right;
-    width: 700px;
-    padding-top: 80px;   
+    width: 175px;
+    padding-top: 20px;   
 }
 
 
-.hello h1 {
-    font-size: 80px; 
-    font-weight: 900;
-    font-family:  'Georgia', serif, sans-serif; 
+.hello h1{
+    font-size: 24px; 
+    font-weight: 500;
+    font-family: 'Josefin Sans', sans-serif; 
     color: rgb(128, 32, 167);
     animation-name: hello;
-    animation-duration: 3s;
+    animation-duration: 6s;
     animation-direction: alternate; 
     animation-iteration-count: infinite;
-    text-decoration: none; 
-    text-shadow: 2px 2px 5px black;
+    text-decoration: italic !important; 
+    text-shadow: 1px 1px 1px black;
+    
 }   
 
 @keyframes hello {
  0% {color: rgb(210, 188, 219)}
- 10% {color: rgb(176, 146, 192)}
- 25% {color: rgb(169, 116, 190)}
+ 10% {color: rgb(176, 146, 192); letter-spacing: 3px}
+ 25% {color: rgb(169, 116, 190); letter-spacing: 5px; }
  50% {color: rgb(154, 91, 184)}
  75% {color: rgb(129, 56, 163)}
  100% {color: rgb(128, 32, 167)}
@@ -108,59 +104,60 @@ p {
 
 
 .name-container {
-    padding: 60px 0 60px 0;
-    width: 100%;
+    padding: 15px 0 15px 0;
+    width: 100vw;
     display: flex;
     justify-content: center; 
     text-align: center;
     height: auto;
-    margin-right: 10px;
-    margin-left: 10px;
+    margin-right: 3px;
+    margin-left: 3px;
     background-color: rgb(243, 242, 242);
     background-image: linear-gradient(rgb(173, 173, 173), rgb(211, 209, 209), rgb(228, 227, 227),  rgb(243, 242, 242));
 }
 
 .name {
     display: flex; 
-    font-family: 'Architects_Daughter', serif, sans-serif;
+    font-family: 'Josefin Sans', sans-serif;
     font-weight: 900;
-    font-size: 78px; 
+    font-size: 20px;
+    color: rgb(128, 32, 167);
 }
 
 .about-me-container {
     display: flex; 
     justify-content: center;
-    height: 900px;
-    padding-bottom: 50px;
+    height: 225px;
+    padding-bottom: 13px;
     border-style: outset;
 }
 
 .image-block {
     float: left; 
-    margin-left: 300px; 
+    margin-left: 75px; 
     justify-content: center;
     align-content: center;
-    padding-top: 25px; 
+    padding-top: 7px; 
     
 }
 
 .image {
-    height: 900px; 
+    height: 225px; 
     border-radius: 20%;   
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 10px 20px 0 rgba(0, 0, 0, 1);
 }
 
 .about-me-block {
     float: right;
-    width: 1325px; 
+    width: 331px; 
 }
 
 .grid-container {
 display: grid;
-grid-template-columns: 500px 500px;
-grid-column-gap: 700px;
-height: 800px;
-width: 100%;
+grid-template-columns: 125px 125px;
+grid-column-gap: 175px;
+height: 200px;
+width: 100vw;
 display: flex; 
 align-content: center;
 justify-content: center;  
@@ -169,35 +166,35 @@ justify-content: center;
 .grid-item1 {
     grid-column-start: 1;
     grid-column-end: 2;
-    margin-left: 800px; 
+    margin-left: 200px; 
 }
 
 .grid-item2 {
     grid-column-start: 2;
     grid-column-end: 3;
-    padding-top: 150px; 
+    padding-top: 38px; 
     align-content: right; 
     justify-content: right; 
-    margin-left: 400px;  
+    margin-left: 100px;  
 }
 
 .background-headings {
     font-family: 'Gabriola', serif, sans-serif; 
-    font-size: 78px;
+    font-size: 20px;
     font-weight: 900;   
 }
 
 .description {
-    padding-left: 100px; 
+    padding-left: 25px; 
     font-family: 'Georgia', serif, sans-serif;
-    font-size: 40px;
+    font-size: 10px;
     font-weight: 900;
 }
 
 .skills-box {
     background-color:  rgb(243, 242, 242);
-    margin-right: 650px; 
-    padding: 0 30px 5px 40px;  
+    margin-right: 163px; 
+    padding: 0 8px 2px 10px;  
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 10px 20px 0 rgba(0, 0, 0, 1);
 }
 
@@ -206,58 +203,55 @@ justify-content: center;
 display: flex;
 align-content: center;
 justify-content: center;
-border-style: outset;
-    border-width: 5px;
 }
 
 .resume {
-    width: 2200px; 
-    height: auto;
-   padding: 10px 0 0 0;
+    width: 550px; 
+    height: 430px;
+   padding: 3px 0 0 0;
     object-fit: fill;
-    font-size: 38px;
-    color: black; 
+    font-size: 10px;
     text-decoration: none; 
 }
 
 .res-headers {
     font-family: 'Georgia', serif, sans-serif;
-    font-size: 54px;
+    font-size: 14px;
     font-weight: 900;
-    text-shadow: 2px 2px; 
+    text-shadow: 1px 1px; 
     color: purple;
 }
 
 .res-headers-box {
     background-color: rgb(233, 212, 245);
-    height: 100px; 
+    height: 25px; 
    }
 
 .res-style1 {
     font-family: 'Georgia', serif, sans-serif;
-    font-size: 48px;
+    font-size: 12px;
     font-weight: 900;
 }
 
 .res-style2 {
     font-family: 'Georgia', serif, sans-serif;
-    font-size: 40px;
+    font-size: 10px;
 }
 
 .res-style3 {
       font-family: 'Georgia', serif, sans-serif;
-    font-size: 40px;
+    font-size: 10px;
     font-weight: 900;
 }
  
 
 .footer {
     align-self: flex-end;
-    margin-left: 10px;
-    height: 80px;
-    font-size: 40px;
+    margin-left: 12px;
+    height: 20px;
+    font-size: 12px;
     font-weight: 500;
-    padding-top: 10px; 
+    padding-top: 2px; 
     color: black; 
     background-image: linear-gradient( rgb(211, 209, 209), rgb(228, 227, 227),  rgb(243, 242, 242));
 }
