--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ p {
 .paper {
     background-image: url(assets/tornpaper2.png);
     background-size: cover;
-    padding: 1% 5% 3% 5%;
+    padding: 5% 5% 3% 5%;
     background-repeat: no-repeat;
 }
 
@@ -174,7 +174,8 @@ align-content: center;
     align-content: center; 
     justify-content: center; 
     margin-top: 2%;
-    width: 70%;
+    width: 30%;
+    margin-right: 20%;
 }
 
 .background-headings {
@@ -224,7 +225,7 @@ align-content: center;
 }
 
 .bullet-points {
-    padding-top: 10%;
+    padding-top: 2%;
 
     font-family: 'Georgia', serif, sans-serif;
     font-weight: 900;
